<resources>
    <string name="app_name">FirebaseTodo</string>
    <string name="get_things_done_with_todo">Get things done with TODO</string>
    <string name="get_started">Get Started</string>
    <string name="welcome">welcome</string>
    <string name="welcome_description">Welcome to Todo! Your personal task manager. Stay organized, stay productive.</string>
    <string name="welcome_onboard">Welcome onboard!</string>
    <string name="registration_description">Let\'s help you meet your tasks</string>
    <string name="full_name_hint">Enter your full name</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">log out</string>
    <string name="error_input_email">Invalid email</string>
    <string name="error_input_name">Invalid name</string>
    <string name="error_password_length">Password must be at least 6 characters</string>
    <string name="error_confirm_password">Passwords don\'t match</string>
    <string name="forget_password_question">Forget password?</string>
    <string name="reset_password_description">Provide your account\'s email for which you want to reset your password</string>
    <string name="reset_password">reset password</string>
    <string name="send_message">Send message</string>
    <string name="instruction_message">A letter with instructions has been sent by email</string>
    <string name="error_sending">An error occurred while sending the email</string>
    <string name="back_button">back_button</string>
    <string name="todos">todos</string>
    <string name="profile">profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="your_tasks">Your tasks</string>
    <string name="num_example">0</string>
    <string name="task_completed">task completed</string>
    <string name="task_in_process">task in process</string>
    <string name="name">Name</string>
    <string name="mail_mail_com">mail@mail.com</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="image_preview">image_preview</string>
    <string name="delete_account">Delete account</string>
    <string name="saving">Saving…</string>
    <string name="error_saving">Failure saving new data</string>
    <string name="delete_warning">Are you sure you want to delete your account?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_your_email">Confirm your email address</string>
    <string name="confirmation_email">We will send confirmation link on your email</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="todo">Todo</string>
    <string name="check">check</string>
    <string name="trash">trash</string>
    <string name="title">Title</string>
    <string name="error_todo">The field must not be empty</string>
    <string name="add_todo">add_todo</string>
    <string name="todo_list_is_empty">todo list is empty</string>
</resources>