<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="10dp"
    android:elevation="0dp"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_todo"
            style="@style/DescriptionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_check"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/check"
            android:src="@drawable/ic_check"
            app:layout_constraintBottom_toBottomOf="@id/tv_todo"
            app:layout_constraintEnd_toStartOf="@id/iv_trash"
            app:layout_constraintTop_toTopOf="@id/tv_todo" />

        <ImageView
            android:id="@+id/iv_trash"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/trash"
            android:src="@drawable/ic_trash"
            app:layout_constraintBottom_toBottomOf="@id/tv_todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_todo" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>